Still using md-virtual-list directive.

--- a/app/templates/panel/business/business.html
+++ b/app/templates/panel/business/business.html
@@ -63,6 +63,9 @@
                     <th md-column md-order-by="delivered">Delivered Confirmation</th>
                 </tr>
             </thead>
+            <!--<div business-virtual-list business-data-provider="businesses">-->
+
+            <!--</div>-->
             <tbody md-body>
                 <tr md-row md-select="business" md-auto-select class="repeated-item"
                     md-virtual-repeat="business in businesses | orderBy: query.order">
