--- a/app/templates/panel/business/business.virtual.list.html
+++ b/app/templates/panel/business/business.virtual.list.html
@@ -1,16 +1,16 @@
-<tbody md-body class="canvas" ng-style="canvasHeight">
-    <tr md-row md-select="business" md-auto-select class="renderer"
+<tbody class="canvas" ng-style="canvasHeight">
+    <tr class="renderer"
         ng-style="business.styles"
         ng-repeat="business in visibleProvider | orderBy: query.order">
-        <td md-cell>{{business.mitbbsId}}</td>
-        <td md-cell>{{business.product}}</td>
-        <td md-cell>$ {{business.price  | number: 2}}</td>
-        <td md-cell>{{business.quantity}}</td>
-        <td md-cell>$ {{business.price * business.quantity | number: 2}}</td>
-        <td md-cell>{{business.location}}</td>
-        <td md-cell>{{business.zipCode}}</td>
-        <td md-cell>{{business.paymentMethod}}</td>
-        <td md-cell>{{business.paid}}</td>
-        <td md-cell>{{business.delivered}}</td>
+        <td>{{business.mitbbsId}}</td>
+        <td>{{business.product}}</td>
+        <td>$ {{business.price  | number: 2}}</td>
+        <td>{{business.quantity}}</td>
+        <td>$ {{business.price * business.quantity | number: 2}}</td>
+        <td>{{business.location}}</td>
+        <td>{{business.zipCode}}</td>
+        <td>{{business.paymentMethod}}</td>
+        <td>{{business.paid}}</td>
+        <td>{{business.delivered}}</td>
     </tr>
 </tbody>
